--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-PORT = "80"
+PORT = "3001"
 MONGO_URL = "mongodb://localhost:27017/"
-MONGO_DBNAME = "KammuCafe01"
-ORIGIN = "http://localhost:3000"
+MONGO_DBNAME = "db_kammucafe"
+ORIGIN = "34.128.125.148:80"
 
 ACCESS_TOKEN_SECRET = hjhjhljhghut87656476tr76465r76fguhkjoiijjio
 REFRESH_TOKEN_SECRET  = jdfjsjfoaser3u420327320321324y328y4324y324y9
